--- a/projects.html
+++ b/projects.html
@@ -30,22 +30,43 @@
   </div>
 </nav>
 
-<section id="projects">
+<section id="projects" class="section-decor">
 <h2>Projects</h2>
 
 <div class="project-container">
 
   <div class="project-card">
-    <h3>Fake Job Detection</h3>
-    <p>Machine learning model that detects fraudulent job postings using classification and preprocessing techniques.</p>
+    <h3>Fake Job Posting Detection using NLP</h3>
+    <ul>
+      <li>Developed a machine learning model to detect fraudulent job postings using NLP techniques.</li>
+      <li>Performed text preprocessing and applied TF-IDF vectorization for feature extraction.</li>
+      <li>Trained a Logistic Regression classifier and evaluated using accuracy, precision, recall, F1-score, and confusion matrix.</li>
+      <li>Handled class imbalance using Random Oversampling to improve fake job detection performance.</li>
+    </ul>
   </div>
 
   <div class="project-card">
-    <h3>Data Leakage Study</h3>
-    <p>Research project analyzing how improper data handling can inflate ML model performance.</p>
+    <h3>Data Leakage Impact Study in Machine Learning</h3>
+    <ul>
+      <li>Designed a controlled experiment comparing a proper ML pipeline with an intentionally leaky pipeline.</li>
+      <li>Implemented correct train–validation–test splitting using Scikit-learn to establish a reliable baseline.</li>
+      <li>Simulated real-world data leakage scenarios (preprocessing before split, target-correlated features).</li>
+      <li>Analyzed performance inflation to demonstrate risks of unreliable model evaluation in production systems.</li>
+    </ul>
   </div>
 
 </div>
+
+<div class="sec-circle br-yellow-xl"></div>
+<div class="sec-circle br-pink-lg"></div>
+<div class="sec-circle br-blue-md"></div>
+<div class="sec-circle br-pink-sm"></div>
+<div class="sec-circle br-blue-sm"></div>
+
+<div class="sec-circle tl-blue-lg"></div>
+<div class="sec-circle tl-pink-md"></div>
+<div class="sec-circle tl-yellow-sm"></div>
+<div class="sec-circle tl-pink-sm"></div>
 
 </section>
 
