Updated skills.html with correct code

--- a/skills.html
+++ b/skills.html
@@ -30,7 +30,7 @@
   </div>
 </nav>
 
-<section id="skills">
+<section id="skills" class="section-decor center-sec">
 <h2>Skills</h2>
 <ul>
 <li>Python</li>
@@ -41,6 +41,18 @@
 <li>Scikit-learn</li>
 <li>Git & GitHub</li>
 </ul>
+
+<div class="sec-circle br-yellow-xl"></div>
+<div class="sec-circle br-pink-lg"></div>
+<div class="sec-circle br-blue-md"></div>
+<div class="sec-circle br-pink-sm"></div>
+<div class="sec-circle br-blue-sm"></div>
+
+<div class="sec-circle tl-blue-lg"></div>
+<div class="sec-circle tl-pink-md"></div>
+<div class="sec-circle tl-yellow-sm"></div>
+<div class="sec-circle tl-pink-sm"></div>
+
 </section>
 
 <footer>
