--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
+
+<link rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 </head>
 
 <body>
@@ -30,11 +34,28 @@
   </div>
 </nav>
 
-<section id="contact">
+<section id="contact" class="section-decor center-sec">
 <h2>Contact</h2>
-<p>Email: <a href="mailto:bushrashaikh4704@gmail.com">bushrashaikh4704@gmail.com</a></p>
-<p>GitHub: <a href="https://github.com/BushraShaikh4704">MY GitHub</a></p>
-<p>LinkedIn: <a href="https://www.linkedin.com/in/bushrashaikh4704">MY LinkedIn</a></p>
+<div class="social-icons">
+<a href="mailto:bushrashaikh4704@gmail.com" class="icon">
+<i class="fas fa-envelope"></i>
+</a>
+<a href="https://github.com/BushraShaikh4704" target="_blank" class="icon">
+<i class="fab fa-github"></i>
+</a>
+<a href="https://www.linkedin.com/in/bushrashaikh4704" target="_blank" class="icon">
+<i class="fab fa-linkedin-in"></i>
+</a>
+</div>
+<div class="sec-circle br-yellow-xl"></div>
+<div class="sec-circle br-pink-lg"></div>
+<div class="sec-circle br-blue-md"></div>
+<div class="sec-circle br-pink-sm"></div>
+<div class="sec-circle br-blue-sm"></div>
+<div class="sec-circle tl-blue-lg"></div>
+<div class="sec-circle tl-pink-md"></div>
+<div class="sec-circle tl-yellow-sm"></div>
+<div class="sec-circle tl-pink-sm"></div>
 </section>
 
 <footer>
