--- a/about.html
+++ b/about.html
@@ -30,9 +30,13 @@
   </div>
 </nav>
 
-<section id="about">
+<section id="about" class="section-decor">
 <h2>About Me</h2>
-<p>I am an aspiring data science and machine learning enthusiast passionate about solving real-world problems using AI. I enjoy building practical ML projects, experimenting with data, and continuously improving my technical skills. My goal is to grow into a professional AI engineer by learning and applying modern technologies.</p>
+<p>
+I am a <strong>B.Tech 3rd year student at G. H. Raisoni Institute of Engineering and Business Management, Jalgaon</strong>, with a strong interest in Data Science and Machine Learning.<br>
+I am passionate about solving real-world problems using data-driven approaches and artificial intelligence. I enjoy building practical ML projects, experimenting with datasets, and continuously improving my technical skills.<br>
+My goal is to grow into a professional AI and Data Science engineer by learning and applying modern technologies to impactful problems.
+</p>
 <a href="Resume Bushra.docx" download style="
 display:inline-block;
 margin-top:15px;
@@ -44,6 +48,16 @@ text-decoration:none;
 font-weight:bold;">
 Download Resume
 </a>
+<div class="sec-circle br-yellow-xl"></div>
+<div class="sec-circle br-pink-lg"></div>
+<div class="sec-circle br-blue-md"></div>
+<div class="sec-circle br-pink-sm"></div>
+<div class="sec-circle br-blue-sm"></div>
+
+<div class="sec-circle tl-blue-lg"></div>
+<div class="sec-circle tl-pink-md"></div>
+<div class="sec-circle tl-yellow-sm"></div>
+<div class="sec-circle tl-pink-sm"></div>
 </section>
 
 <footer>
