--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <span id="typing"></span>
     </h3>
 
-    <a href="#contact" class="btn">Get In Touch</a>
+    <a href="contact.html" class="btn">Get In Touch</a>
 
     <div class="social-icons">
       <a href="#"><i class="fas fa-envelope"></i></a>
